# CalculiX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cCalc.c  main.c
.github/workflows/: android  android.yml  linux.yml  macos.yml  release  release.yml  webassembly  webassembly.yml  windows.yml
cmake/toolchains/: mingw-w64-x86_64.cmake
docs/: CalculiX.js  LICENSE  README.md  index.html  style.css
projects/VS2022/: CalculiX.sln  calculix.sln  main.sln
projects/VS2022/calculix/: calculix.vcxproj
projects/VS2022/main/: main.vcxproj
projects/VS2022/raylib/: raylib.vcxproj
projects/scripts/: build.bat
src/: Info.plist  Makefile  Makefile.Android  calculix  calculix.c  calculix.rc  compile_commands.json  main  main.c  main.rc  minshell.html
web/: CalculiX.wasm  package-lock.json  package.json  style.css
